strip out some redundancy in notebook cell

--- a/results/c_elegans/peaks2utr_analysis.ipynb
+++ b/results/c_elegans/peaks2utr_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "1a104969",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "30604c64",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "a45d2844",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
        "[2278 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "76d7a055",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        "[4703 rows x 2 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "60b0dc8b",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
        "[4197 rows x 5 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,12 +528,12 @@
    "id": "e1c5da8c",
    "metadata": {},
    "source": [
-    "As peaks2utr has used the --override-utr flag, we know that the start/end base will match the start/end base of the 3' UTR for the innermost mRNA transcript (on the forward/reverse strand, respectively). Therefore, we can aggregate each gene by taking the minimum start base (for forward strand, or maximum end base for reverse strand), and maximum end base (for forward strand, or minimum start base for reverse strand) to capture the full extent of the UTR for that gene."
+    "As peaks2utr has used the --override-utr flag, we know that the start/end base will match the start/end base of the 3' UTR for the innermost mRNA transcript (on the forward/reverse strand, respectively). Therefore, we can aggregate each gene by taking the minimum start base and maximum end base to capture the full extent of the UTR for that gene."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "35a5f8b1",
    "metadata": {},
    "outputs": [
@@ -577,28 +577,28 @@
        "      <td>5110183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>WBGene00000023</th>\n",
-       "      <td>+</td>\n",
-       "      <td>12018640</td>\n",
-       "      <td>12018684</td>\n",
+       "      <th>WBGene00000006</th>\n",
+       "      <td>-</td>\n",
+       "      <td>2571740</td>\n",
+       "      <td>2571987</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>WBGene00000079</th>\n",
-       "      <td>+</td>\n",
-       "      <td>7777470</td>\n",
-       "      <td>7777655</td>\n",
+       "      <th>WBGene00000010</th>\n",
+       "      <td>-</td>\n",
+       "      <td>11388682</td>\n",
+       "      <td>11389140</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>WBGene00000084</th>\n",
-       "      <td>+</td>\n",
-       "      <td>7607751</td>\n",
-       "      <td>7608245</td>\n",
+       "      <th>WBGene00000012</th>\n",
+       "      <td>-</td>\n",
+       "      <td>3886070</td>\n",
+       "      <td>3886110</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>WBGene00000096</th>\n",
-       "      <td>+</td>\n",
-       "      <td>9531099</td>\n",
-       "      <td>9531132</td>\n",
+       "      <th>WBGene00000020</th>\n",
+       "      <td>-</td>\n",
+       "      <td>2255921</td>\n",
+       "      <td>2256151</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -607,16 +607,10 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>WBGene00304985</th>\n",
-       "      <td>-</td>\n",
-       "      <td>8482759</td>\n",
-       "      <td>8482794</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>WBGene00304992</th>\n",
-       "      <td>-</td>\n",
-       "      <td>9813005</td>\n",
-       "      <td>9813095</td>\n",
+       "      <th>WBGene00304996</th>\n",
+       "      <td>+</td>\n",
+       "      <td>5341995</td>\n",
+       "      <td>5342045</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>WBGene00305018</th>\n",
@@ -629,6 +623,12 @@
        "      <td>-</td>\n",
        "      <td>2939477</td>\n",
        "      <td>2939518</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WBGene00306081</th>\n",
+       "      <td>+</td>\n",
+       "      <td>6872119</td>\n",
+       "      <td>6872142</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>WBGene00306121</th>\n",
@@ -645,36 +645,33 @@
        "               strand     start       end\n",
        "gene                                     \n",
        "WBGene00000001      +   5109948   5110183\n",
-       "WBGene00000023      +  12018640  12018684\n",
-       "WBGene00000079      +   7777470   7777655\n",
-       "WBGene00000084      +   7607751   7608245\n",
-       "WBGene00000096      +   9531099   9531132\n",
+       "WBGene00000006      -   2571740   2571987\n",
+       "WBGene00000010      -  11388682  11389140\n",
+       "WBGene00000012      -   3886070   3886110\n",
+       "WBGene00000020      -   2255921   2256151\n",
        "...               ...       ...       ...\n",
-       "WBGene00304985      -   8482759   8482794\n",
-       "WBGene00304992      -   9813005   9813095\n",
+       "WBGene00304996      +   5341995   5342045\n",
        "WBGene00305018      -   9588662   9588719\n",
        "WBGene00306080      -   2939477   2939518\n",
+       "WBGene00306081      +   6872119   6872142\n",
        "WBGene00306121      -    231578    231691\n",
        "\n",
        "[2593 rows x 3 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "control_utrs = pd.concat([\n",
-    "    cdf[cdf.strand==\"+\"].groupby([\"gene\", \"strand\"]).agg({\"start\": min, \"end\": max}).reset_index(),\n",
-    "    cdf[cdf.strand==\"-\"].groupby([\"gene\", \"strand\"]).agg({\"end\": max, \"start\": min}).reset_index()\n",
-    "]).set_index(\"gene\")\n",
+    "control_utrs = cdf.groupby([\"gene\", \"strand\"]).agg({\"start\": min, \"end\": max}).reset_index(\"strand\")\n",
     "control_utrs"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "de4de4c1",
+   "id": "8b8ed9f8",
    "metadata": {},
    "source": [
     "# Compare the two datasets"
@@ -690,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "5b72a67b",
    "metadata": {},
    "outputs": [
@@ -842,7 +839,7 @@
        "[2278 rows x 5 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62bc8b06",
+   "id": "522098d2",
    "metadata": {},
    "source": [
     "## Supplementary Table 2 statistics"
@@ -910,7 +907,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4828cd27",
+   "id": "ec34014f",
    "metadata": {},
    "source": [
     "Save list of gene ids with novel 3' UTRs called by peaks2utr"
