tweaks to notebooks

--- a/results/c_elegans/utrme_analysis.ipynb
+++ b/results/c_elegans/utrme_analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3780dde",
+   "id": "16b02f9b",
    "metadata": {},
    "source": [
     "## Create GFF databases and read in features"
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c07cea5",
+   "id": "183a9478",
    "metadata": {},
    "source": [
     "## Prepare test dataset"
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed331e9d",
+   "id": "8a9b1b48",
    "metadata": {},
    "source": [
     "Aggregate transcripts for minimum start base and maximum end base to capture full extent of the UTR for each gene."
@@ -375,8 +375,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
-   "id": "4bc81a34",
+   "execution_count": 233,
+   "id": "27a1c491",
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "[496 rows x 3 columns]"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fddd24b",
+   "id": "14876efd",
    "metadata": {},
    "source": [
     "## Prepare control dataset"
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5522f389",
+   "id": "91d95e99",
    "metadata": {},
    "source": [
     "Aggregate transcripts for minimum start base and maximum end base to capture full extent of the UTR for each gene."
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "c96126a2",
+   "id": "11a92a87",
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbc51026",
+   "id": "7220ef9f",
    "metadata": {},
    "source": [
     "# Compare the two datasets"
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 236,
    "id": "52ebdb54",
    "metadata": {},
    "outputs": [
@@ -943,14 +943,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>WBGene00206362</th>\n",
-       "      <td>-</td>\n",
-       "      <td>4660839</td>\n",
-       "      <td>4661949</td>\n",
-       "      <td>1110</td>\n",
-       "      <td>-11.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>WBGene00219288</th>\n",
        "      <td>-</td>\n",
        "      <td>13526268</td>\n",
@@ -982,9 +974,17 @@
        "      <td>359</td>\n",
        "      <td>128.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WBGene00305050</th>\n",
+       "      <td>-</td>\n",
+       "      <td>1379101</td>\n",
+       "      <td>1379231</td>\n",
+       "      <td>130</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>474 rows × 5 columns</p>\n",
+       "<p>496 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -996,16 +996,16 @@
        "WBGene00000150      -   5342174   5342480   306         6.0\n",
        "WBGene00000156      +   8055142   8055482   340         7.0\n",
        "...               ...       ...       ...   ...         ...\n",
-       "WBGene00206362      -   4660839   4661949  1110       -11.0\n",
        "WBGene00219288      -  13526268  13527384  1116      1098.0\n",
        "WBGene00219313      +   9416506   9416572    66      -131.0\n",
        "WBGene00235158      -   2148830   2150194  1364       995.0\n",
        "WBGene00302974      +    532853    533212   359       128.0\n",
+       "WBGene00305050      -   1379101   1379231   130         NaN\n",
        "\n",
-       "[474 rows x 5 columns]"
+       "[496 rows x 5 columns]"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,13 +1014,12 @@
     "control_utrs[\"len\"] = abs(control_utrs[\"end\"] - control_utrs[\"start\"])\n",
     "test_utrs[\"len\"] = abs(test_utrs[\"end\"] - test_utrs[\"start\"])\n",
     "test_utrs[\"difference\"] = (test_utrs[\"len\"] - control_utrs[\"len\"])\n",
-    "test_utrs = test_utrs.dropna()\n",
     "test_utrs"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e6cadb90",
+   "id": "ccb89536",
    "metadata": {},
    "source": [
     "## Supplementary Table 2 statistics"
@@ -1028,21 +1027,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
-   "id": "00a31e49",
+   "execution_count": 238,
+   "id": "eba2f8e3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Canonical utrs that are missed by peaks2utr: 2119 (81.72%)\n",
-      "peaks2utr utrs that match true utr to within 50 bases: 157 (6.05%)\n",
-      "peaks2utr utrs that reduce true utr by >50 bases: 121 (4.67%)\n",
-      "peaks2utr utrs that extend true utr by between 50 and 200 bases: 19 (0.73%)\n",
-      "peaks2utr utrs that extend true utr by >200 bases: 177 (6.83%)\n",
-      "peaks2utr utrs called where no true utr existed previously: 0\n",
-      "Total peaks2utr UTRs: 474\n"
+      "Canonical utrs that are missed by UTRme: 2119 (81.72%)\n",
+      "UTRme utrs that match true utr to within 50 bases: 157 (6.05%)\n",
+      "UTRme utrs that reduce true utr by >50 bases: 121 (4.67%)\n",
+      "UTRme utrs that extend true utr by between 50 and 200 bases: 19 (0.73%)\n",
+      "UTRme utrs that extend true utr by >200 bases: 177 (6.83%)\n",
+      "UTRme utrs called where no true utr existed previously: 22\n",
+      "Total UTRme UTRs: 496\n"
      ]
     }
    ],
@@ -1063,13 +1062,63 @@
     "num_extended1 = len(test_utrs[(test_utrs['difference'] > BP1) & (test_utrs['difference'] <= BP2)])\n",
     "num_extended2 = len(test_utrs[test_utrs['difference'] > BP2])\n",
     "\n",
-    "print(\"Canonical utrs that are missed by peaks2utr: {} ({:.2f}%)\".format(num_missed_utrs, 100*num_missed_utrs/total_control))\n",
-    "print(\"peaks2utr utrs that match true utr to within {} bases: {} ({:.2f}%)\".format(BP1, num_matched, 100*num_matched/total_control))\n",
-    "print(\"peaks2utr utrs that reduce true utr by >{} bases: {} ({:.2f}%)\".format(BP1, num_reduced, 100*num_reduced/total_control))\n",
-    "print(\"peaks2utr utrs that extend true utr by between {} and {} bases: {} ({:.2f}%)\".format(BP1, BP2, num_extended1, 100*num_extended1/total_control))\n",
-    "print(\"peaks2utr utrs that extend true utr by >{} bases: {} ({:.2f}%)\".format(BP2, num_extended2, 100*num_extended2/total_control))\n",
-    "print(\"peaks2utr utrs called where no true utr existed previously: {}\".format(num_novel_utrs))\n",
-    "print(\"Total peaks2utr UTRs: {}\".format(total_test))"
+    "print(\"Canonical utrs that are missed by UTRme: {} ({:.2f}%)\".format(num_missed_utrs, 100*num_missed_utrs/total_control))\n",
+    "print(\"UTRme utrs that match true utr to within {} bases: {} ({:.2f}%)\".format(BP1, num_matched, 100*num_matched/total_control))\n",
+    "print(\"UTRme utrs that reduce true utr by >{} bases: {} ({:.2f}%)\".format(BP1, num_reduced, 100*num_reduced/total_control))\n",
+    "print(\"UTRme utrs that extend true utr by between {} and {} bases: {} ({:.2f}%)\".format(BP1, BP2, num_extended1, 100*num_extended1/total_control))\n",
+    "print(\"UTRme utrs that extend true utr by >{} bases: {} ({:.2f}%)\".format(BP2, num_extended2, 100*num_extended2/total_control))\n",
+    "print(\"UTRme utrs called where no true utr existed previously: {}\".format(num_novel_utrs))\n",
+    "print(\"Total UTRme UTRs: {}\".format(total_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca1f9712",
+   "metadata": {},
+   "source": [
+    "Save list of gene ids with novel 3' UTRs called by UTRme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "id": "5124a2c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WBGene00000632\n",
+      "WBGene00001745\n",
+      "WBGene00003977\n",
+      "WBGene00006044\n",
+      "WBGene00007976\n",
+      "WBGene00010291\n",
+      "WBGene00011651\n",
+      "WBGene00011934\n",
+      "WBGene00012389\n",
+      "WBGene00012483\n",
+      "WBGene00013404\n",
+      "WBGene00016727\n",
+      "WBGene00017908\n",
+      "WBGene00018596\n",
+      "WBGene00019992\n",
+      "WBGene00020556\n",
+      "WBGene00021473\n",
+      "WBGene00022112\n",
+      "WBGene00022367\n",
+      "WBGene00044348\n",
+      "WBGene00044435\n",
+      "WBGene00305050\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(os.path.join(out_dir, \"novel_utr_genes_utrme.txt\"), \"w\") as f:\n",
+    "    for g in sorted(list(novel_utr_genes)):\n",
+    "        print(g)\n",
+    "        f.write(g + \"\\n\")"
    ]
   }
  ],
