moved notebook inputs to input dir

--- a/results/c_elegans/getutr_analysis.ipynb
+++ b/results/c_elegans/getutr_analysis.ipynb
@@ -14,13 +14,14 @@
     "import pandas as pd\n",
     "import sqlite3\n",
     "\n",
+    "in_dir = \"input\"\n",
     "out_dir = \"output\"\n",
     "Path(out_dir).mkdir(exist_ok=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ef0cd4ec",
+   "id": "940b2152",
    "metadata": {},
    "source": [
     "## Create GFF databases and read in features"
@@ -45,24 +46,24 @@
     "    return db\n",
     "\n",
     "# WormBase release WS283 canonical three_prime_UTR for C. elegans chromosome I\n",
-    "control_fn = \"WormBase.I.three_prime_UTR.gff3\"\n",
+    "control_fn = os.path.join(in_dir, \"WormBase.I.three_prime_UTR.gff3\")\n",
     "db_control = create_db(control_fn, \"control.db\")\n",
     "control = list(db_control.all_features())\n",
     "\n",
     "# Output from GETUTR run with PAVA smoothing and s >= 0.95\n",
-    "test_fn = \"getutr_output.gff3\"\n",
+    "test_fn = os.path.join(in_dir, \"getutr_output.gff3\")\n",
     "db_test = create_db(test_fn, \"test_getutr.db\")\n",
     "test = list(db_test.all_features())\n",
     "\n",
     "# WormBase release WS283 canonical mRNA transcripts for C. elegans chromosome I\n",
-    "genes_fn = \"WormBase.I.mRNA.gff3\"\n",
+    "genes_fn = os.path.join(in_dir, \"WormBase.I.mRNA.gff3\")\n",
     "db_genes = create_db(genes_fn, \"genes.db\")\n",
     "genes = list(db_genes.all_features())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "95a46b8e",
+   "id": "e6119982",
    "metadata": {},
    "source": [
     "## Prepare control dataset"
@@ -368,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0caaace0",
+   "id": "6fe678e2",
    "metadata": {},
    "source": [
     "Aggregate transcripts for minimum start base and maximum end base to capture full extent of the UTR for each gene."
@@ -377,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d9c5b4c6",
+   "id": "fa6e5c2f",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24e315e3",
+   "id": "2a2bf685",
    "metadata": {},
    "source": [
     "## Prepare test dataset"
@@ -854,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2acece03",
+   "id": "2ccd2e2f",
    "metadata": {},
    "source": [
     "## Supplementary Table 2 statistics"
@@ -863,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e84b81be",
+   "id": "aa4a4051",
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +909,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed455f99",
+   "id": "408e532b",
    "metadata": {},
    "source": [
     "Save list of gene ids with novel 3' UTRs called by GETUTR"
@@ -917,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "db35202f",
+   "id": "cddb9383",
    "metadata": {},
    "outputs": [
     {
