--- a/results/c_elegans/peaks2utr_analysis.ipynb
+++ b/results/c_elegans/peaks2utr_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "1a104969",
    "metadata": {},
    "outputs": [],
@@ -14,6 +14,7 @@
     "import pandas as pd\n",
     "import sqlite3\n",
     "\n",
+    "in_dir = \"input\"\n",
     "out_dir = \"output\"\n",
     "Path(out_dir).mkdir(exist_ok=True)"
    ]
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "30604c64",
    "metadata": {},
    "outputs": [],
@@ -45,17 +46,17 @@
     "    return db\n",
     "\n",
     "# WormBase release WS283 canonical three_prime_UTR for C. elegans chromosome I\n",
-    "control_fn = \"WormBase.I.three_prime_UTR.gff3\"\n",
+    "control_fn = os.path.join(in_dir, \"WormBase.I.three_prime_UTR.gff3\")\n",
     "db_control = create_db(control_fn, \"control.db\")\n",
     "control = list(db_control.all_features())\n",
     "\n",
     "# Output from peaks2utr run\n",
-    "test_fn = \"peaks2utr_output.gff3\"\n",
+    "test_fn = os.path.join(in_dir, \"peaks2utr_output.gff3\")\n",
     "db_test = create_db(test_fn, \"test.db\")\n",
     "test = list(db_test.all_features())\n",
     "\n",
     "# WormBase release WS283 canonical mRNA transcripts for C. elegans chromosome I\n",
-    "genes_fn = \"WormBase.I.mRNA.gff3\"\n",
+    "genes_fn = os.path.join(in_dir, \"WormBase.I.mRNA.gff3\")\n",
     "db_genes = create_db(genes_fn, \"genes.db\")\n",
     "genes = list(db_genes.all_features())"
    ]
