--- a/results/c_elegans/utrme_analysis.ipynb
+++ b/results/c_elegans/utrme_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 240,
    "id": "458728fb",
    "metadata": {},
    "outputs": [],
@@ -14,13 +14,14 @@
     "import pandas as pd\n",
     "import sqlite3\n",
     "\n",
+    "in_dir = \"input\"\n",
     "out_dir = \"output\"\n",
     "Path(out_dir).mkdir(exist_ok=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "16b02f9b",
+   "id": "353857df",
    "metadata": {},
    "source": [
     "## Create GFF databases and read in features"
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 242,
    "id": "59ae4ad4",
    "metadata": {},
    "outputs": [],
@@ -45,24 +46,24 @@
     "    return db\n",
     "\n",
     "# WormBase release WS283 canonical three_prime_UTR for C. elegans chromosome I\n",
-    "control_fn = \"WormBase.I.three_prime_UTR.gff3\"\n",
+    "control_fn = os.path.join(in_dir, \"WormBase.I.three_prime_UTR.gff3\")\n",
     "db_control = create_db(control_fn, \"control.db\")\n",
     "control = list(db_control.all_features())\n",
     "\n",
     "# Output from UTRme run\n",
-    "test = \"utrme_output.gff3\"\n",
+    "test = os.path.join(in_dir, \"utrme_output.gff3\")\n",
     "db_test = create_db(test, \"test_utrme.db\")\n",
     "test = list(db_test.all_features())\n",
     "\n",
     "# WormBase release WS283 canonical mRNA transcripts for C. elegans chromosome I\n",
-    "genes_fn = \"WormBase.I.mRNA.gff3\"\n",
+    "genes_fn = os.path.join(in_dir, \"WormBase.I.mRNA.gff3\")\n",
     "db_genes = create_db(genes_fn, \"genes.db\")\n",
     "genes = list(db_genes.all_features())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "183a9478",
+   "id": "dea57927",
    "metadata": {},
    "source": [
     "## Prepare test dataset"
@@ -367,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a9b1b48",
+   "id": "744bf8c9",
    "metadata": {},
    "source": [
     "Aggregate transcripts for minimum start base and maximum end base to capture full extent of the UTR for each gene."
@@ -376,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "27a1c491",
+   "id": "45c174e8",
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14876efd",
+   "id": "0b5c1696",
    "metadata": {},
    "source": [
     "## Prepare control dataset"
@@ -691,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91d95e99",
+   "id": "bfb881ad",
    "metadata": {},
    "source": [
     "Aggregate transcripts for minimum start base and maximum end base to capture full extent of the UTR for each gene."
@@ -700,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "11a92a87",
+   "id": "c1995505",
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +838,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7220ef9f",
+   "id": "f36fb4d7",
    "metadata": {},
    "source": [
     "# Compare the two datasets"
@@ -1019,7 +1020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccb89536",
+   "id": "1ec2508a",
    "metadata": {},
    "source": [
     "## Supplementary Table 2 statistics"
@@ -1028,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "eba2f8e3",
+   "id": "c2e294c1",
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1074,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca1f9712",
+   "id": "f9a5e30e",
    "metadata": {},
    "source": [
     "Save list of gene ids with novel 3' UTRs called by UTRme"
@@ -1082,7 +1083,7 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "id": "5124a2c7",
+   "id": "68e9ae72",
    "metadata": {},
    "outputs": [
     {
